WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271805
Security key doesn't show up when allowCredentials transports contain "Internal"
https://bugs.webkit.org/show_bug.cgi?id=271805
Summary
Security key doesn't show up when allowCredentials transports contain "Internal"
pascoe@apple.com
Reported
2024-03-27 15:59:44 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2024-03-27 16:00:03 PDT
<
rdar://problem/124265507
>
pascoe@apple.com
Comment 2
2024-03-27 16:01:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26538
EWS
Comment 3
2024-04-01 12:54:57 PDT
Committed
276894@main
(442e5675cbb3): <
https://commits.webkit.org/276894@main
> Reviewed commits have been landed. Closing PR #26538 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug