Security key doesn't show up when allowCredentials transports contain "Internal" https://bugs.webkit.org/show_bug.cgi?id=271805 rdar://124265507

Reviewed by Brent Fulgham.

This condition was written wrong. We should submit a cross-platform request if transports are empty, or if
they contain any transport that is not "Internal" or "Hybrid," which are both considered platform requests
by system API.

* Source/WebKit/UIProcess/WebAuthentication/Cocoa/WebAuthenticatorCoordinatorProxy.mm:
(WebKit::WebAuthenticatorCoordinatorProxy::requestsForAssertion):

Canonical link: https://commits.webkit.org/276894@main